argocd/app-bar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udabackend-bar
  namespace: bar
spec:
  ports:
  - port: 3030
    targetPort: 3030
  selector:
    app: udabackend-bar
